fix(news): fix scroll issue and css display on mobile

--- a/src/app/post/components/post-list/post-list.component.scss
+++ b/src/app/post/components/post-list/post-list.component.scss
@@ -84,7 +84,7 @@ h2 {
     @media #{$news-max} {
       ::ng-deep .post .imageContainer .image {
         height: unset;
-        max-height: unset;
+        max-height: 320px;
       }
     }
   }
